error with logo area

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             .inner_main_menu ul li:nth-child(2){float: left;}
             .inner_main_menu ul li:nth-child(3){float: left;}
             .inner_main_menu ul li a{color: #262626; font-size: 20px; text-transform: uppercase; text-decoration: none; display: block; padding: 10px 20px;}
-            .inner_main_menu ul li a:hover{color: #55095e}
+            .inner_main_menu ul li a:hover{color: #c92476}
             #main_menu{width: 100%; position: relative;}
-            .logo_area{width: 200px; height: 200px; position: absolute; left: 50%; top: 0; content: ""}
+            .logo-area{width: 100px; height: 100px; position: absolute; left: 50%; top: 0; content: ""}
         </style>
     </head>
     <body>
