--- a/index.html
+++ b/index.html
@@ -5,26 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>RPI Dance Club</title>
-        <link rel="icon" href="">
-        <link href="http://fonts.googleapis.com/css?family=Oswald:400" rel="stylesheet">
-        <style>
-            body{background: none repeat scroll 0 0;font-family: 'Oswald', sans-serif;font-size: 15px;font-weight: 400; line-height: 1.5em;}
-            .inner_main_menu {margin: 0 auto; width: 1170px;}
-            .inner_main_menu ul{margin: 0; padding: 0; list-style: none;text-align: right;}
-            .inner_main_menu ul li{float: none; display: inline-block;}
-            .inner_main_menu ul li:nth-child(1){float: left;}
-            .inner_main_menu ul li:nth-child(2){float: left;}
-            .inner_main_menu ul li:nth-child(3){float: left;}
-            .inner_main_menu ul li a{color: #262626; font-size: 20px; text-transform: uppercase; text-decoration: none; display: block; padding: 10px 20px;}
-            .inner_main_menu ul li a:hover{color: #c92476}
-            #main_menu{width: 100%; position: relative;}
-            .logo-area{width: 100px; height: 100px; position: absolute; left: 50%; top: 0; content: ""}
-        </style>
+        <link rel="icon" href="icon1.png">
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <div id="main_menu">
             <div class="logo-area">
-                <a href=""><img src="sample_logo.jpg" alt="dance-logo"></a>
+                <a href=""><img src="sample_logo.jpg" alt="dance-logo" width=150px height=150px></a>
             </div>
             <div class="inner_main_menu">
                 <ul>
