--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>RPI Dance Club</title>
         <link rel="icon" href="icon1.png">
+        <link rel="stylesheet" href="slicknav.min.css">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
@@ -14,7 +15,7 @@
                 <a href=""><img src="sample_logo.jpg" alt="dance-logo" width=150px height=150px></a>
             </div>
             <div class="inner_main_menu">
-                <ul>
+                <ul id="menu">
                     <li><a href="">Home</a></li>
                     <li><a href="">Schedule</a></li>
                     <li><a href="">Class Descriptions</a></li>
@@ -24,5 +25,12 @@
                 </ul>
             </div>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+        <script src="jquery.slicknav.min.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function(){
+                $('#menu').slicknav();
+            });
+        </script>
     </body>
 </html>
