made collapsible navbar. Still have size editing to do for when collapse should occur

--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <div id="main_menu">
-            <div class="logo-area">
-                <a href=""><img src="sample_logo.jpg" alt="dance-logo" width=150px height=150px></a>
-            </div>
-            <div class="inner_main_menu">
-                <ul id="menu">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Schedule</a></li>
-                    <li><a href="">Class Descriptions</a></li>
-                    <li><a href="">Instructors</a></li>
-                    <li><a href="">E-Board</a></li>
-                    <li><a href="">Photo Gallery</a></li>
-                </ul>
-            </div>
+        <div class="slicknav_menu">
+            
         </div>
+            <div id="main_menu">
+                <div class="logo-area">
+                    <a href=""><img src="sample_logo.jpg" alt="dance-logo" width=150px height=150px></a>
+                </div>
+                <div class="inner_main_menu">
+                    <ul id="menu">
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Schedule</a></li>
+                        <li><a href="">Class Descriptions</a></li>
+                        <li><a href="">Instructors</a></li>
+                        <li><a href="">E-Board</a></li>
+                        <li><a href="">Photo Gallery</a></li>
+                    </ul>
+                </div>
+            </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
         <script src="jquery.slicknav.min.js"></script>
         <script type="text/javascript">
