--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         </div>
             <div id="main_menu">
                 <div class="logo-area">
-                    <a href=""><img src="sample_logo.jpg" alt="dance-logo" width=150px height=150px></a>
+                    <!--<a href=""><img src="sample_logo.jpg" alt="dance-logo" width=150px height=150px></a>-->
+                    RPI Dance Club
                 </div>
                 <div class="inner_main_menu">
                     <ul id="menu">
