--- a/index.html
+++ b/index.html
@@ -6,35 +6,37 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>RPI Dance Club</title>
         <link rel="icon" href="icon1.png">
-        <link rel="stylesheet" href="slicknav.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <div class="slicknav_menu">
-            
-        </div>
-            <div id="main_menu">
-                <div class="logo-area">
-                    <!--<a href=""><img src="sample_logo.jpg" alt="dance-logo" width=150px height=150px></a>-->
-                    RPI Dance Club
-                </div>
-                <div class="inner_main_menu">
-                    <ul id="menu">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Schedule</a></li>
-                        <li><a href="">Class Descriptions</a></li>
-                        <li><a href="">Instructors</a></li>
-                        <li><a href="">E-Board</a></li>
-                        <li><a href="">Photo Gallery</a></li>
-                    </ul>
-                </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">RPI Dance Club</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="schedule.html">Class Schedule</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="class_desc.html">Class Descriptions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="instructors.html">Instructors</a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="gallery.html">Photo Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="eboard.html">E-Board</a>
+                    </li>
+                </ul>
             </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-        <script src="jquery.slicknav.min.js"></script>
-        <script type="text/javascript">
-            $(document).ready(function(){
-                $('#menu').slicknav();
-            });
-        </script>
+        </nav>
     </body>
 </html>
