added a contact us page

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">RPI Dance Club</a>
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="#">RPI Dance Club</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -26,13 +26,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="instructors.html">Instructors</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">E-Board</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="eboard.html">E-Board</a>
                     </li>
                     <li class="nav-item">
                             <a class="nav-link" href="gallery.html">Photo Gallery</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
