--- a/gallery.html
+++ b/gallery.html
@@ -11,15 +11,12 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">RPI Dance Club</a>
+            <a class="navbar-brand" href="index.html">RPI Dance Club</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="schedule.html">Class Schedule</a>
                     </li>
@@ -34,6 +31,9 @@
                     </li>
                     <li class="nav-item active">
                             <a class="nav-link" href="#">Photo Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
