--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="schedule.html">Class Schedule</a>
                     </li>
@@ -34,6 +31,9 @@
                     </li>
                     <li class="nav-item">
                             <a class="nav-link" href="gallery.html">Photo Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
