--- a/class_desc.html
+++ b/class_desc.html
@@ -18,6 +18,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="schedule.html">Class Schedule</a>
                     </li>
                     <li class="nav-item active">
