--- a/schedule.html
+++ b/schedule.html
@@ -17,6 +17,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Class Schedule</a>
                     </li>
@@ -38,6 +41,8 @@
                 </ul>
             </div>
         </nav>
+        
+
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     </body>
