working on home page

--- a/index.html
+++ b/index.html
@@ -41,6 +41,46 @@
                 </ul>
             </div>
         </nav>
+
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <center><h1>DANCE CLUB FALL 2019</h1></center>
+            </div>
+        </div>
+
+        <div class="containter" id="about">
+            <div class="row">
+                <div class="col">
+                    <center>ABOUT US</center>
+                    <p>The Dance Club offers classes in ballet, contemporary, jazz, tap and hip hop. 
+                        Classes are held weekly during the academic year. 
+                        Every spring, we hold a recital in which dancers from each of the
+                        classes perform choreographed numbers. </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="containter" id="info">
+            <div class="row justify-content-md-center">
+                <div class="col col-lg-4">
+                    <center>MEMBER INFO</center>
+                    <ul class="list-style">
+                        <li>The first week of classes is FREE!</li>
+                        <li>For RPI students the semester fee is $65 for unlimited classes.</li>
+                        <li>For Non-RPI students the unlimited class fee is $100.</li>
+                        <li>All classes are held in the upstairs studios at the RPI Mueller Center.</li>
+                    </ul>
+                </div>
+                <div class="col col-lg-4">
+                    <center>ANNOUNCEMENTS</center>
+                </div>
+            </div>
+        </div>
+
+        <div class="container" id="recitalvideo">
+            <!--Learn how to embed a video in here-->
+        </div>
+
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     </body>
