added headers to the titles

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <center><h1>DANCE CLUB FALL 2019</h1></center>
+                <center>DANCE CLUB FALL 2019</center>
             </div>
         </div>
 
         <div class="containter" id="about">
             <div class="row">
                 <div class="col">
-                    <center>ABOUT US</center>
+                    <center><h4>ABOUT US</h4></center>
                     <p>The Dance Club offers classes in ballet, contemporary, jazz, tap and hip hop. 
                         Classes are held weekly during the academic year. 
                         Every spring, we hold a recital in which dancers from each of the
@@ -62,8 +62,8 @@
 
         <div class="containter" id="info">
             <div class="row justify-content-md-center">
-                <div class="col col-lg-4">
-                    <center>MEMBER INFO</center>
+                <div class="col col-md-4">
+                    <center><h4>MEMBER INFO</h4></center>
                     <ul class="list-style">
                         <li>The first week of classes is FREE!</li>
                         <li>For RPI students the semester fee is $65 for unlimited classes.</li>
@@ -71,13 +71,17 @@
                         <li>All classes are held in the upstairs studios at the RPI Mueller Center.</li>
                     </ul>
                 </div>
-                <div class="col col-lg-4">
-                    <center>ANNOUNCEMENTS</center>
+                <div class="col col-md-4">
+                    <center><h4>ANNOUNCEMENTS</h4></center>
+                    <ul class="list-style">
+                        <li>Classes start on <b>September 2nd</b>!</li>
+                    </ul>
                 </div>
             </div>
         </div>
 
         <div class="container" id="recitalvideo">
+            <center><h4>SPRING 2019 RECITAL VIDEO</h4></center>
             <!--Learn how to embed a video in here-->
         </div>
 
