padding on the info container

--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
 
         <div class="containter" id="info">
             <div class="row justify-content-md-center">
-                <div class="col col-md-4">
+                <div class="col col-md-6">
                     <center><h4>MEMBER INFO</h4></center>
-                    <ul class="list-style">
-                        <li>The first week of classes is FREE!</li>
-                        <li>For RPI students the semester fee is $65 for unlimited classes.</li>
-                        <li>For Non-RPI students the unlimited class fee is $100.</li>
-                        <li>All classes are held in the upstairs studios at the RPI Mueller Center.</li>
-                    </ul>
+                    <center>
+                        The first week of classes is FREE!</br>
+                        For RPI students the semester fee is $65 for unlimited classes.</br>
+                        For Non-RPI students the unlimited class fee is $100.</br>
+                        All classes are held in the upstairs studios at the RPI Mueller Center.</br>
+                    </center>
                 </div>
-                <div class="col col-md-4">
+                <div class="col col-md-6">
                     <center><h4>ANNOUNCEMENTS</h4></center>
                     <ul class="list-style">
                         <li>Classes start on <b>September 2nd</b>!</li>
