made 2 columns stack for mobile

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="containter" id="info">
             <div class="row justify-content-md-center">
-                <div class="col col-md-6">
+                <div class="col-sm-6">
                     <center><h4>MEMBER INFO</h4></center>
                     <center>
                         The first week of classes is FREE!</br>
@@ -71,7 +71,7 @@
                         All classes are held in the upstairs studios at the RPI Mueller Center.</br>
                     </center>
                 </div>
-                <div class="col col-md-6">
+                <div class="col-sm-6">
                     <center><h4>ANNOUNCEMENTS</h4></center>
                     <ul class="list-style">
                         <li>Classes start on <b>September 2nd</b>!</li>
