new background example and copyright added

--- a/index.html
+++ b/index.html
@@ -55,6 +55,25 @@
                 <br>
                 <br>
                 <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
             </div>
         </div>
 
@@ -103,22 +122,12 @@
             <!--Learn how to embed a video in here-->
         </div>
 
+        <div class="container" id="copyright">
+            <center>Copyright &#169; 2019 RPI Dance Club</center>
+            <!--Learn how to embed a video in here-->
+        </div>
+
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        <script> 
-            window.onscroll = function() {myFunction()};
-
-            var navbar = document.getElementById("navbarNav");
-
-            var sticky = navbar.offsetTop;
-
-            function myFunction() {
-                if (window.pageYOffset >= sticky) {
-                    navbar.classList.add("sticky")
-                } else {
-                    navbar.classList.remove("sticky");
-                }
-            }
-        </script>
     </body>
 </html>
