colors for the information and new fonts for the jumbotron and copyright

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <div class="container">
                 <center>DANCE CLUB FALL 2019</center>
                 <br>
+                <center>&#10507;</center>
                 <br>
                 <br>
                 <br>
@@ -57,12 +58,7 @@
                 <br>
                 <br>
                 <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
+                <br>         
                 <br>
                 <br>
                 <br>
@@ -73,29 +69,22 @@
             </div>
         </div>
 
-        <!-- <div class="container" id="emptyspace">
+        <!-- <div class="containter" id="about">
             <div class="row">
-                <div class="col-sm-12">
-                    
-                </div>
+                
             </div>
         </div> -->
 
-        <div class="containter" id="about">
-            <div class="row">
-                <div class="col-sm-12">
+        <div class="containter-fluid" id="info">
+            <div class="row justify-content-md-center">
+                <div class="col-sm-4 mb-3" id="aboutus">
                     <center><h4><b>ABOUT US</b></h4></center>
                     <center><p>The Dance Club offers classes in ballet, contemporary, jazz, tap and hip hop. 
                         Classes are held weekly during the academic year. 
                         Every spring, we hold a recital in which dancers from each of the
                         classes perform choreographed numbers. </p></center>
                 </div>
-            </div>
-        </div>
-
-        <div class="containter" id="info">
-            <div class="row justify-content-md-center">
-                <div class="col-sm-6 mb-3">
+                <div class="col-sm-4 mb-3" id="memberinfo">
                     <center><h4><b>MEMBER INFO</b></h4></center>
                     <center>
                         The first week of classes is FREE!</br>
@@ -103,8 +92,9 @@
                         For Non-RPI students the unlimited class fee is $100.</br>
                         All classes are held in the upstairs studios at the RPI Mueller Center.</br>
                     </center>
+                    <br>
                 </div>
-                <div class="col-sm-6 mb-3">
+                <div class="col-sm-4 mb-3" id="announcements">
                     <center><h4><b>ANNOUNCEMENTS</b></h4></center>
                     <ul class="list-style">
                         <li>Classes start on <b>September 2nd</b>!</li>
@@ -113,14 +103,18 @@
             </div>
         </div>
 
-        <div class="container" id="recitalvideo">
-            <center><h4>SPRING 2019 RECITAL VIDEO</h4></center>
+        <div class="container-fluid" id="recitalvideo">
+            <center><h4><b>SPRING 2019 RECITAL VIDEO</b></h4></center>
             <!--Learn how to embed a video in here-->
         </div>
 
-        <div class="container" id="copyright">
-            <center>Copyright &#169; 2019 RPI Dance Club</center>
-            <!--Learn how to embed a video in here-->
+        <div class="container-fluid" id="copyright">
+                <div class="row justify-content-md-center">
+                    <div class="col-sm-12">
+                        <center>Copyright &#169; 2019 RPI Dance Club</center>
+                        <!--Learn how to embed a video in here-->
+                    </div>
+                </div>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
