fixed active tab and removed the link from the brand

--- a/instructors.html
+++ b/instructors.html
@@ -26,8 +26,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="class_desc.html">Class Descriptions</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Instructors</a>
+                    <li class="nav-item">
+                        <a class="nav-link" id="selected" href="#">Instructors</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="eboard.html">E-Board</a>
