--- a/class_desc.html
+++ b/class_desc.html
@@ -23,8 +23,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="schedule.html">Class Schedule</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Class Descriptions</a>
+                    <li class="nav-item">
+                        <a class="nav-link" id="selected" href="#">Class Descriptions</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="instructors.html">Instructors</a>
