--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,8 @@
                     <li class="nav-item">
                             <a class="nav-link" href="gallery.html">Photo Gallery</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                    <li class="nav-item">
+                        <a class="nav-link" id="selected" href="#">Contact Us</a>
                     </li>
                 </ul>
             </div>
