--- a/eboard.html
+++ b/eboard.html
@@ -29,8 +29,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="instructors.html">Instructors</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">E-Board</a>
+                    <li class="nav-item">
+                        <a class="nav-link" id="selected" href="#">E-Board</a>
                     </li>
                     <li class="nav-item">
                             <a class="nav-link" href="gallery.html">Photo Gallery</a>
