--- a/gallery.html
+++ b/gallery.html
@@ -32,8 +32,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="eboard.html">E-Board</a>
                     </li>
-                    <li class="nav-item active">
-                            <a class="nav-link" href="#">Photo Gallery</a>
+                    <li class="nav-item">
+                            <a class="nav-link" id="selected" href="#">Photo Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
