--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#">RPI Dance Club</a>
+            <a class="navbar-brand">RPI Dance Club</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                            <a class="nav-link" href="#">Home</a>
+                    <li class="nav-item">
+                        <a class="nav-link" id="selected" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="schedule.html">Class Schedule</a>
@@ -68,12 +68,6 @@
                 <br>
             </div>
         </div>
-
-        <!-- <div class="containter" id="about">
-            <div class="row">
-                
-            </div>
-        </div> -->
 
         <div class="containter-fluid" id="info">
             <div class="row justify-content-md-center">
