--- a/schedule.html
+++ b/schedule.html
@@ -20,8 +20,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Class Schedule</a>
+                    <li class="nav-item">
+                        <a class="nav-link" id="selected" href="#">Class Schedule</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="class_desc.html">Class Descriptions</a>
