--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand">RPI Dance Club</a>
+        <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
+            <a class="navbar-brand" id="logo"><b>RPI Dance Club</b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,6 +44,10 @@
 
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
+                <br>
+                <br>
+                <br>
+                <br>
                 <center>DANCE CLUB FALL 2019</center>
                 <br>
                 <center>&#10507;</center>
@@ -113,5 +117,22 @@
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script>
+            window.onscroll = function() {scrollFunction()};
+
+            function scrollFunction() {
+                if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
+                    document.getElementById("navbar").style.padding = "20px 10px";
+                    document.getElementById("logo").style.fontSize = "26px";
+                    document.getElementById("navbar").style.backgroundColor = "gray";
+                    document.getElementById("logo").style.color = "purple";
+                } else {
+                    document.getElementById("navbar").style.padding = "40px 10px";
+                    document.getElementById("logo").style.fontSize = "30px";
+                    document.getElementById("navbar").style.backgroundColor = "transparent";
+                    document.getElementById("logo").style.color = "purple";
+                }
+            }
+        </script>
     </body>
 </html>
