--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script>
-
-            window.onscroll = function() {scrollFunction()};
+            if ($(window).width() > 747) {
+                window.onscroll = function() {scrollFunction()};
+            }
             
             function scrollFunction() {
                 if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
