updated all files with the new brand

--- a/schedule.html
+++ b/schedule.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand">RPI Dance Club</a>
+                <a class="navbar-brand" id="logo"><b>RPI Dance Club</b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -39,6 +39,18 @@
             </div>
         </nav>
         
+        
+        <div class="containter-fluid">
+            <div class="row justify-content-md-center">
+                <div class="col-sm-12 mb-3" id="fees">
+                    <br>
+                    <br>
+                    <br>
+                    <center>RPI Student Fee is $65</center><br>
+                    <center>Non-RPI Student Fee is $100</center>
+                </div>
+            </div>
+        </div>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
