added the class times and still working on page formatting

--- a/index.html
+++ b/index.html
@@ -101,14 +101,10 @@
             <center><h4><b>SPRING 2019 RECITAL VIDEO</b></h4></center>
             <!--Learn how to embed a video in here-->
         </div>
-
-        <div class="container-fluid" id="copyright">
-                <div class="row justify-content-md-center">
-                    <div class="col-sm-12">
-                        <center>Copyright &#169; 2019 RPI Dance Club</center>
-                    </div>
-                </div>
-        </div>
+        
+        <footer>
+            <center>Copyright &#169; 2019 RPI Dance Club</center>
+        </footer>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
