--- a/schedule.html
+++ b/schedule.html
@@ -39,18 +39,41 @@
             </div>
         </nav>
         
-        
         <div class="containter-fluid">
             <div class="row justify-content-md-center">
                 <div class="col-sm-12 mb-3" id="fees">
                     <br>
                     <br>
                     <br>
-                    <center>RPI Student Fee is $65</center><br>
-                    <center>Non-RPI Student Fee is $100</center>
+                    <center><i>RPI Student Fee is $65 &#9734; Non-RPI Student Fee is $100</i></center>
                 </div>
             </div>
         </div>
+
+        <div class="containter-fluid">
+            <div class="row">
+                <div class="col-sm-12 mb-3" id="class-times">
+                    <center><h5><b>MONDAY</b></h5>
+                    <h6>Jazz &#10042; 6:30-8:00 PM</h6>
+                    <h6>Contemporary &#10042; 8:00-9:30 PM</h6><br>
+                    <h5><b>TUESDAY</b></h5>
+                    <h6>Beginner Ballet &#10042; 6:30-8:00 PM</h6>
+                    <h6>Advanced Ballet &#10042; 8:00-9:30 PM</h6><br>
+                    <h5><b>WEDNESDAY</b></h5>
+                    <h6>Beginner Hip Hop &#10042; 6:30-7:30 PM</h6>
+                    <h6>Advanced Hip Hop &#10042; 7:30-8:30 PM</h6><br>
+                    <h5><b>THURSDAY</b></h5>
+                    <h6>Pre-Pointe &#10042; 6:30-7:30 PM</h6>
+                    <h6>Tap &#10042; 7:30-8:30 PM</h6><br>
+                    <h5><b>SUNDAY</b></h5>
+                    <h6>Make-Up Classes &#10042; 6:30-8:30 PM</h6></center>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <center>Copyright &#169; 2019 RPI Dance Club</center>
+        </footer>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
