adjusted the width for the class times to support mobile view

--- a/schedule.html
+++ b/schedule.html
@@ -38,35 +38,37 @@
                 </ul>
             </div>
         </nav>
-        
-        <div class="containter-fluid">
+        <div class="containter-fluid" id="loc-desc">
             <div class="row justify-content-md-center">
                 <div class="col-sm-12 mb-3" id="fees">
                     <br>
                     <br>
                     <br>
-                    <center><i>RPI Student Fee is $65 &#9734; Non-RPI Student Fee is $100</i></center>
+                    <center><i>All classes are held in the upstairs studios at the RPI Mueller Center.</i></center>
                 </div>
             </div>
         </div>
-
         <div class="containter-fluid">
             <div class="row">
-                <div class="col-sm-12 mb-3" id="class-times">
-                    <center><h5><b>MONDAY</b></h5>
-                    <h6>Jazz &#10042; 6:30-8:00 PM</h6>
-                    <h6>Contemporary &#10042; 8:00-9:30 PM</h6><br>
-                    <h5><b>TUESDAY</b></h5>
-                    <h6>Beginner Ballet &#10042; 6:30-8:00 PM</h6>
-                    <h6>Advanced Ballet &#10042; 8:00-9:30 PM</h6><br>
-                    <h5><b>WEDNESDAY</b></h5>
-                    <h6>Beginner Hip Hop &#10042; 6:30-7:30 PM</h6>
-                    <h6>Advanced Hip Hop &#10042; 7:30-8:30 PM</h6><br>
-                    <h5><b>THURSDAY</b></h5>
-                    <h6>Pre-Pointe &#10042; 6:30-7:30 PM</h6>
-                    <h6>Tap &#10042; 7:30-8:30 PM</h6><br>
-                    <h5><b>SUNDAY</b></h5>
-                    <h6>Make-Up Classes &#10042; 6:30-8:30 PM</h6></center>
+                <div class="col-sm-12" id="class-times">
+                    <div style="text-align: center;">
+                        <div id="class-times-box">
+                            <center><h5><b>MONDAY</b></h5></center>
+                            <h6>Jazz<span style="float: right">6:30-8:00 PM</span></h6>
+                            <h6>Contemporary<span style="float: right">8:00-9:30 PM</span></h6><br>
+                            <center><h5><b>TUESDAY</b></h5></center>
+                            <h6>Beginner Ballet<span style="float: right">6:30-8:00 PM</span></h6>
+                            <h6>Advanced Ballet<span style="float: right">8:00-9:30 PM</span></h6><br>
+                            <center><h5><b>WEDNESDAY</b></h5></center>
+                            <h6>Beginner Hip Hop<span style="float: right">6:30-7:30 PM</span></h6>
+                            <h6>Advanced Hip Hop<span style="float: right">7:30-8:30 PM</span></h6><br>
+                            <center><h5><b>THURSDAY</b></h5></center>
+                            <h6>Pre-Pointe<span style="float: right">6:30-7:30 PM</span></h6>
+                            <h6>Tap<span style="float: right">7:30-8:30 PM</span></h6><br>
+                            <center><h5><b>SUNDAY</b></h5></center>
+                            <h6>Make-Up Classes<span style="float: right">6:30-8:30 PM</span></h6>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
