Class schedule page is done

--- a/schedule.html
+++ b/schedule.html
@@ -38,20 +38,16 @@
                 </ul>
             </div>
         </nav>
-        <div class="containter-fluid" id="loc-desc">
-            <div class="row justify-content-md-center">
-                <div class="col-sm-12 mb-3" id="fees">
-                    <br>
-                    <br>
-                    <br>
-                    <center><i>All classes are held in the upstairs studios at the RPI Mueller Center.</i></center>
-                </div>
-            </div>
-        </div>
         <div class="containter-fluid">
             <div class="row">
                 <div class="col-sm-12" id="class-times">
                     <div style="text-align: center;">
+                        <div id="fees">
+                            <br>
+                            <br>
+                            <br>
+                            <center><i>All classes are held in the upstairs studios at the RPI Mueller Center.</i></center><br>                            
+                        </div>
                         <div id="class-times-box">
                             <center><h5><b>MONDAY</b></h5></center>
                             <h6>Jazz<span style="float: right">6:30-8:00 PM</span></h6>
