obtained instructor photos from the old site

--- a/instructors.html
+++ b/instructors.html
@@ -38,6 +38,25 @@
                 </ul>
             </div>
         </nav>
+
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <br>
+                <br>
+                <br>
+                <center>MEET THE INSTRUCTORS</center>
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div id="instr-box">
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     </body>
